@@ -26,8 +26,9 @@
 (Scott Yeadon)
 - Fixed typo in 13-14 upgrade docs and checksum checker sql, and removed tasklist sql
 
-(Claudia Jürgen)
+(Claudia Juergen)
 - SF patch #1514965 fixes SF bug #1505422. fix typo in SQL for item mapper
+- SF patch #1516988  Deleting owner of mapped items SF bug #1196724
 
 (Richard Jones)
 - SF bug #1515075. minor build file fix to copy correct config file
